[metadata]
name = sound-generator
version = 0.0.1
author = Andrew Kofink
author_email = ajofink@gmail.com
description = Generating sound with python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
